--- a/index.html
+++ b/index.html
@@ -1,66 +1,96 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
+    <meta charset="utf-8">
     <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-<!-- Optional theme -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title></title>
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title></title>
 </head>
 <body>
-      <div class="container">
-         <div class="col-lg-12">
-             <h1 id="title"> Survey Form</h1>
-             <p id="description">
-                    This is a simple survey form we are making for our project. 
-                    Please fill the form and submit it.
-             </p>
-             <form id="survey-form" class="form">
+    <div class="container">
+        <div class="col-lg-12">
+            <h1 id="title"> Survey Form</h1>
+            <p id="description">
+                This is a simple survey form we are making for our project.
+                Please fill the form and submit it.
+            </p>
+            <form id="survey-form" class="form">
                 <div class="form-group">
                     <label for="Name">Name</label>
-                    <input type="text" class="form-control" id="name" >                    
-                  </div>
-                    <div class="form-group">
-                        <label for="email">Email address:</label>
-                        <input class="form-control" type="email" id="email" placeholder="abc@gmail.com">
-                    </div>
-                    <div class="form-group">
-                        <label for="age">Your age:</label>
-                        <input  class="form-control" min="18" max="60" type="number" id="age">                       
-                    </div>                   
-               <div class="form-group">
-                <label for="Male">Gender</label>
-                <label class="radio-inline">                   
-                    <input type="radio" name="Male" checked>Male
-                  </label>
-                  <label class="radio-inline">
-                    <input type="radio" name="Female">Female
-                  </label>
-                  <label class="radio-inline">
-                    <input type="radio" name="Other">Other
-                </label>
+                    <input type="text" class="form-control" id="name">
+                </div>
+                <div class="form-group">
+                    <label for="email">Email address:</label>
+                    <input class="form-control" type="email" id="email" placeholder="abc@gmail.com">
+                </div>
+                <div class="form-group">
+                    <label for="age">Your age:</label>
+                    <input class="form-control" min="18" max="60" type="number" id="age">
+                </div>
+                <div class="form-group">
+                    <label for="Male">Gender</label>
+                    <label class="radio-inline">
+                        <input type="radio" name="Male" checked>Male
+                    </label>
+                    <label class="radio-inline">
+                        <input type="radio" name="Female">Female
+                    </label>
+                    <label class="radio-inline">
+                        <input type="radio" name="Other">Other
+                    </label>
 
-               </div>
-               <div class="form-group">
-                <label for="skill">Hobies</label>
-               <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-                <label class="form-check-label" for="inlineCheckbox1">Reading</label>
-              </div>
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
-                <label class="form-check-label" for="inlineCheckbox2">Listning Music</label>
-              </div>
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3" >
-                <label class="form-check-label" for="inlineCheckbox3">Swimming</label>
-              </div>
-            </div>
-         
-           
+                </div>
+                <div class="form-group">
+                    <label for="skill">Hobies</label>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
+                        <label class="form-check-label" for="inlineCheckbox1">Reading</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
+                        <label class="form-check-label" for="inlineCheckbox2">Listning Music</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+                        <label class="form-check-label" for="inlineCheckbox3">Swimming</label>
+                    </div>
+                </div>
+
+
+
+                <div class="row">
+                    <div class="form-group">
+                        <label for="dropdown">Choose your country:</label>
+                        <select name="country" id="dropdown" class="form-control">
+                            <option value="Pakistan">Pakistan</option>
+                            <option value="Africa">South Africa</option>
+                            <option value="Span">Span</option>
+                            <option value="India">India</option>
+                            <option value="America">United State of America</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="yourComments">Yor comments</label>
+                    <textarea class="form-control" id="yourComments" rows="3"></textarea>
+                </div>
+        </div>
+        <div class="row">
+            <button type="submit" id="submit" class="btn btn-primary">Submit</button>
+        </div>
+
+        </form>
+
+    </div>
+    </div>
+</body>
+</html>
+
+
